--- a/index.css
+++ b/index.css
@@ -77,6 +77,13 @@ h6 {
   margin-top: 5px;
   margin-bottom: 4px;
 }
+
+hr {
+  margin: 20px 0;
+  border: 0;
+  border-bottom: solid 1px #ddd;
+}
+
 a {
   color: #194b7d;
   text-decoration: none;
@@ -134,6 +141,14 @@ footer a {
 .reportContainer {
   margin: 30px auto;
   width: 100%;
+}
+
+.incidentsContainer {
+  background-color: #fafafa;
+}
+
+.incidentReportsHeader {
+  margin-bottom: 30px;
 }
 
 .statusContainer {
